# Gimbal_DoubleCamera

./: CMakeLists.txt  GimCamera.cpp  GimCamera.hpp  GimPanorama.cpp  GimPanorama.hpp  README.md  YOLOTracker.hpp  define.h  main.cpp
.history/: README_20210128171807.md  README_20210128171959.md  README_20210128172443.md
GenCameraDriver/: NPPJpegCoder.cpp
GimExec/: GimExec.cpp  GimExec.h
GimUtil/: GimUtil.cpp  GimUtil.h
OpenGL/: Display.h  display.cpp  glad.c  shader_m.h
RobustStitcher/: BundleAdjustment.cpp  BundleAdjustment.h  CMakeLists.txt  CameraParamEstimator.cpp  CameraParamEstimator.h  Compositor.cpp  Compositor.h  FeatureMatch.cpp  FeatureMatch.h  Warper.cpp  Warper.h  main.cpp
STM32/.history/File/API/: RM_Algorithm_20160827225417.c  RM_Algorithm_20210124172108.c  RM_Algorithm_20210124172132.c
STM32/File/API/: RM_Algorithm.h
STM32/File/APP/: DataInit.c  DataInit.h  Debug_Task.c  Debug_Task.h  Gimbal_Task.c  Gimbal_Task.h  RS232.c  RS232.h  USART1_Deal.c  USART1_Deal.h  UnderPan_Task.c  UnderPan_Task.h
STM32/File/BSP/: Bsp_Init.c  Bsp_Init.h  Can1.c  Can1.h  Can2.c  Can2.h  Delay.c  Delay.h  Flash.c  Flash.h  Laser.c  Laser.h  Led.c  Led.h  SysTick.c  SysTick.h  TIM2.c  TIM2.h  TIM4.c  TIM4.h  TIM5.c  TIM5.h  TIM7.c  TIM7.h  USART3.c  USART3.h  Usart1.c  Usart1.h
STM32/File/MPU6050/: mpu6050_driver.c  mpu6050_driver.h  mpu6050_i2c.c  mpu6050_i2c.h  mpu6050_interrupt.c  mpu6050_interrupt.h  mpu6050_process.c
STM32/File/RM_TYPES/: RM_MotorCtrlTypes.h  RM_Types.h
STM32/File/USER/: main.c  main.h  stm32f4xx_it.c
STM32/UCOSIII/UCOSIII_BSP/: bsp.c
STM32/UCOSIII/UCOSIII_CONFIG/: os_cfg.h
Serial/: Serial.cpp  Serial.h
YOLO/: YOLODetector.hpp
